--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sastacoupon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://milind220397.github.io/SastaCouponFrontEnd",
+  "homepage": "http://hajaasmath.github.io/SastaCoupon-FE",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "axios-singleton": "^1.0.2-0",
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
