--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/lab": "^5.0.0-alpha.108",
     "@mui/material": "^5.10.13",
     "@mui/x-date-pickers": "^5.0.8",
+    "@sentry/react": "^7.23.0",
+    "@sentry/tracing": "^7.23.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
